# perplexity-at-home

./: .env.example  .gitignore  .readthedocs.yaml  Makefile  README.md  langgraph.json  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  e2e.yml  release.yml
.notes/: deep-research.md  feat-v2-agent-plan.md  perplexity-dags.md  research-sources.md  runtime-issues-and-fixes.md
.trunk/: trunk.yaml
docs/: architecture.md  getting-started.md  index.md
docs/javascripts/: mermaid-init.js
docs/reference/: cli.md  dashboard.md  deep-research.md  persistence.md  search-workflows.md  settings.md
examples/: deep_research_demo.py  deep_research_planner_demo.py  deep_research_query_gen_demo.py  deep_research_reflection_agent_demo.py  deep_research_retrieval_agent_demo.py  pro_search_answer_demo.py  pro_search_query_gen_demo.py  pro_search_retrieval_demo.py  quick_search_demo.py
infra/: compose.yaml
src/perplexity_at_home/: __init__.py  cli.py  settings.py  utils.py
src/perplexity_at_home/agents/: __init__.py
src/perplexity_at_home/agents/deep_research/: __init__.py  agent.py  context.py  graph.py  runtime.py  state.py
src/perplexity_at_home/agents/deep_research/answer_agent/: __init__.py  agent.py  models.py  prompts.py
src/perplexity_at_home/agents/deep_research/planner_agent/: __init__.py  agent.py  models.py  prompts.py
src/perplexity_at_home/agents/deep_research/query_agent/: __init__.py  agent.py  models.py  prompts.py
src/perplexity_at_home/agents/deep_research/reflection_agent/: __init__.py  agent.py  models.py  prompts.py
src/perplexity_at_home/agents/deep_research/retrieval_agent/: __init__.py  agent.py  models.py  prompts.py
src/perplexity_at_home/agents/pro_search/: __init__.py  agent.py  context.py  graph.py  runtime.py  state.py
src/perplexity_at_home/agents/pro_search/answer_agent/: __init__.py  agent.py  models.py  prompts.py
src/perplexity_at_home/agents/pro_search/query_agent/: __init__.py  agent.py  context.py  models.py  prompts.py  state.py
src/perplexity_at_home/agents/quick_search/: __init__.py  agent.py  context.py  models.py  prompts.py  runtime.py  state.py
src/perplexity_at_home/core/: __init__.py  checkpoint.py  persistence.py  serde.py  store.py
src/perplexity_at_home/dashboard/: __init__.py  app.py  launcher.py  models.py  presentation.py  service.py
src/perplexity_at_home/tools/: __init__.py  models.py
src/perplexity_at_home/tools/tavily/: __init__.py  bundles.py  factories.py  normalize.py  presets.py
tests/: conftest.py  test_builder_modules.py  test_cli.py  test_core_contexts.py  test_core_serde.py  test_dashboard_launcher.py  test_dashboard_models.py  test_dashboard_service.py  test_deep_research_agent.py  test_deep_research_graph.py  test_deep_research_runtime.py  test_live_e2e.py  test_persistence.py  test_pro_search_agent.py  test_pro_search_graph.py  test_search_runtimes.py  test_settings.py  test_tavily_tools.py  test_utils.py
